check jwt token and get authorization data
