# schema/src/api/user-controller.ts
@@ -3,7 +3,8 @@
 // tslint:disable: array-type
 
 import express, { Router } from "express";
-import { LoginResult, User, UserLoginData, UserRegisterData } from "./api-types";
+import { getAuthorization } from "../lib/api-controller-helpers";
+import { AuthorizationData, LoginResult, User, UserLoginData, UserRegisterData } from "./api-types";
 
 export interface IUserService {
   getUser: (authorization: string) => Promise<User>;
@@ -11,11 +12,16 @@ export interface IUserService {
   login: (userLoginData: UserLoginData) => Promise<LoginResult>;
 }
 
-export function createUserController(service: IUserService): Router {
+export function createUserController(service: IUserService, jwtSecret: string): Router {
   const router = express.Router();
 
   router.get("/user", async (req, res) => {
     try {
+      const authorization = getAuthorization<AuthorizationData>(req, jwtSecret);
+      if (!authorization) {
+        res.status(403).send("forbidden");
+        return;
+      }
       const authorization = req.headers.authorization as string;
       const result = await service.getUser(authorization);
       res.json(result);
